# Bitume2000-back

./: .bumpversion.toml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
app/: config.py  main.py  uwsgi.ini
app/Proof_of_Concept/: POE_XP.py
app/errors/: __init__.py  base_custom_error.py
app/errors/authentication_errors/: __init__.py  forbidden.py  incorrect_verification_code.py  unauthorized.py  user_not_found_error.py  wrong_password.py
app/errors/database_errors/: __init__.py  database_errors.py
app/errors/database_manager/: configurations_error.py
app/errors/development_errors/: __init__.py  unimplemented.py
app/errors/file_errors/: __init__.py  file_error.py
app/errors/keycloak_errors/: __init__.py  bad_credentials_error.py  unauthorized_keycloak.py
app/errors/swagger_errors/: swagger_error.py
app/managers/app_error_handler/: __init__.py  app_error_handler.py
app/managers/authentication_manager/: __init__.py  jwt_generation_manager.py  password_manager.py
app/managers/database_manager/: database_config.py  database_manager.py
app/managers/discord_manager/: discord_manager.py
app/managers/mongo_logger/: __init__.py  mongo_logger.py
app/managers/requests_debugger/: __init__.py  requests_debugger.py
app/managers/swagger_manager/: __init__.py  doc_decorator.py  swagger_interface.py
app/setup/: __init__.py
app/tests/data/: conftest.py
app/tests/test_utils/: __init__.py  io_utils.py  path_utils.py  request_utils.py
app/utils/console_logger/: __init__.py  color_formatter.py  console_logger.py
app/utils/crud_helper/: __init__.py  crud_helper.py
app/utils/marshmallow_utils/: base_schema.py
app/utils/model_utils/: __init__.py  get_primary_key.py
app/utils/registry/: __init__.py  registry_abc.py  sqlalchemy_registry.py
app/utils/request_default_responses/: __init__.py  default_response.py
dev/: docker-compose.yml
doc/Architecture_Decision_Records/: ADR_19-11-2023_POOLING.md  ADR_22-02-2024_DOCKER_MULTI_STAGE_BUILD.md  ADR_30-01-2024_DATABASE_MANAGER.md
doc/guides/: debug.md
envs/dev/: docker-compose.yml
envs/dev/back/: .env  .env.example  back-start.sh
envs/prod/back/: .env.example  back-start.sh
envs/shared/back/: Dockerfile  back-start-shared.sh  check-db-var-with-prefix.sh  pip.conf  wait-mongo-connexion.sh  wait-postgres-connexion.sh
envs/shared/mongo/: Dockerfile
migrations/: 20250507084834-user-table.js  20250507164010-role-tables.js  20250601212029-meme-update.js  20250603200148-voted-meme.js
scripts/: run_tests.sh
sphinx/: conf.py  index.rst
src/: app.ts  index.ts
src/bot/: client.ts  commands.ts  events.ts  index.ts
src/bot/services/: buttonEvent.service.ts  chatEvent.service.ts  commands.service.ts  musicPlayer.service.ts
src/configs/: config.ts
src/controllers/: authentication.controller.ts  discord.controller.ts  healthCheck.controller.ts  roles.controller.ts  transit.controller.ts  users.controller.ts
src/errors/: index.ts
src/loaders/: index.ts  sequelize.ts  socket.ts
src/middlewares/: AsyncWrapper.ts  CronTab.ts  ErrorHandler.ts  GetJwtRequired.ts  Logger.ts  index.ts
src/models/: Meme.ts  Role.ts  RoleCategory.ts  RoleRequest.ts  User.ts  UsersHasRoles.ts  index.ts  querys.ts
src/routes/: index.ts
src/routes/auth/: index.ts
src/routes/discord/: index.ts
src/routes/roles/: index.ts
src/services/: auth.service.ts  discord.service.ts  roles.service.ts  users.service.ts
src/types/: enums.ts
(+44 files in other folders)
